# oracle

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
include/: bitboards.h  board.h  display.h  game.h  info_panel.h  position.h  utils.h
python/: precompute_moves.py  pyproject.toml
scripts/: generate_magic_bitboards.py  precompute_moves.py
src/: bitboards.cpp  bitboards.rs  board.cpp  display.cpp  game.cpp  game.rs  info_panel.cpp  lib.rs  main.cpp  main.rs  move_info.rs  position.cpp  position.rs  slint_interface.rs  types.rs  ui.rs  utils.rs
src/bitboards/: magics.rs  mod.rs  storage.rs  tables.rs
src/magic_bitboards/: compute.rs  generate.rs  mod.rs  precompute.rs  storage.rs
src/moves/: compute.rs  generate.rs  info.rs  mod.rs  move_generator.rs  move_info.rs
src/utils/: constants.rs  helpers.rs  types.rs
tests/: perft.rs
ui/: board.slint  dashboard.slint  eval.slint  globals.slint  main.slint
