[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.7.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
include_dir = "0.7.4"
once_cell = "1.20.2"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
ph = "0.8.5"

[build-dependencies]
slint-build = "1.7.2"
